# gxbuild3

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  PKGBUILD  README.md  build.sh  hackedsmcs.md  options.ini  parser.rs
include/: Args.hpp  Ascii.hpp  Endian.hpp  FlashImage.hpp  Log.hpp  Options.hpp  Utils.hpp
include/bootloaders/: 2bl.hpp  3bl.hpp  4bl.hpp  5bl.hpp  6bl.hpp  7bl.hpp  Common.hpp  FlashFileSystem.hpp  Keyvault.hpp  SMC.hpp  XConfig.hpp  Xboxupd.hpp
include/ini/: IniParser.hpp
include/patchers/: BinaryParser.hpp  GxBinaryParser.hpp  GxPatcher.hpp  GxSignature.hpp  Patcher.hpp  Patches.hpp  Signature.hpp
include/stfs/: StfsContainer.hpp
include/utils/: FileManager.hpp  FlashBlockDriver.hpp  FusesetGenerator.hpp
src/: FlashImage.cpp  GxBuild3.cpp  Log.cpp  Main.cpp  Options.cpp  Utils.cpp
src/bootloaders/: 2bl.cpp  3bl.cpp  4bl.cpp  5bl.cpp  6bl.cpp  7bl.cpp  FlashFileSystem.cpp  Keyvault.cpp  SMC.cpp  XConfig.cpp  Xboxupd.cpp  smc.cpp  xconfig.md
src/ini/: IniParser.cpp
src/patchers/: BinaryParser.cpp  GxBinaryParser.cpp  GxPatcher.cpp  GxSignature.cpp  Patcher.cpp  Signature.cpp
src/stfs/: StfsContainer.cpp
src/utils/: FileManager.cpp  FlashBlockDriver.cpp  FusesetGenerator.cpp
